<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CompassDemo</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Locate your location</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About App</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq" translatable="false">FAQ</string>
    <string name="summary_faq" translatable="false">View frequently asked questions</string>
    <string name="url_faq" translatable="false">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy" translatable="false">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms" translatable="false">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage" translatable="false">Default Storage</string>
    <string name="title_new_notification_sound" translatable="false">New message notification</string>
    <string name="title_vibrate" translatable="false">Vibrate</string>
    <string name="summary_vibrate" translatable="false">Vibrate on new notification</string>
    <string name="key_upload_over_wifi" translatable="false">key_upload_over_wifi</string>
    <string name="key_gallery_name" translatable="false">key_gallery_name</string>
    <string name="key_upload_quality" translatable="false">key_upload_quality</string>
    <string name="notifications_new_message" translatable="false">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone" translatable="false">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate" translatable="false">key_vibrate</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>

    <string name="title_ngonngu">Change language</string>
    <string name="sumary_ngonngu">Setup the language of app</string>
    <string name="title_theme">Select Compass Theme</string>
    <string name="sumary_theme">Setup the theme of app</string>
    <string name="sumary_danhgia">This software is used Android,it is a free application that allows us to use the same as a real compass, maybe i made some little bugs and this app need updating, Please,give me 5 start ratting,  Thanks you so much!.</string>
    <string name="title_danhgia">Rating App</string>
    <string name="title_caidatlaban">Setup Compass</string>
    <string name="setup_ngonngu">Setup Language</string>
    <string name="general_ngonngu">General</string>
    <string name="theme">Theme</string>
    <string name="key_font">key_font</string>
    <string name="off">Off</string>
    <string name="on">ON</string>
    <string name="nw">NW</string>
    <string name="s">S</string>
    <string name="n">N</string>
    <string name="w">W</string>
    <string name="sw">SW</string>
    <string name="se">SE</string>
    <string name="e">E</string>
    <string name="ne">NE</string>
    <string name="turn_on_off_gps">Turn On Off GPS</string>
    <string name="setting_gps">Setting GPS</string>
    <string name="url">https://richadx.com/</string>
    <string name="wait_for_gps_signal">Wait for GPS signal ...</string>
    <string name="chon_la_ban">chose compass</string>
    <string name="loai_clasic">You chosen type Classic</string>
    <string name="popupthongtin">Được thiết kế để chạy trên các điện thoại di động và máy tính bảng có hệ điều hành Android từ 4.1 trở lên và có hỗ trợ cảm biến la bàn số của các hãng: Samsung, HTC, Sony, LG,... Với la bàn tự xoay để đo hướng, tọa độ của vị trí người sử dụng. Ngoài việc đo hướng la bàn còn định vị Kinh độ và Vĩ độ theo GPS, Lấy vị trí chính xác của bạn thông qua Google.</string>
    <string name="cancel">cancel</string>
    <string name="well_come">La bàn GPS hoạt động dựa trên Hệ thống Định vị Toàn cầu (Global Positioning System, GPS), và là một menu sử dụng của máy thu GPS. Nhờ đạt được độ chính xác định vị tọa độ cao mà máy thu GPS có thể tính được tốc độ và phương vị di chuyển.</string>
    <string name="rate_app">Rate App</string>
    <string name="ratecom">Your 5 start review is worth more than all money !!</string>
    <string name="urll">https://play.google.com/store/apps/developer?id=25Studio</string>
</resources>